--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -29,6 +29,7 @@ content:
       placeholder: ''
       rows: 5
     third_party_settings: {  }
+    region: content
   field_class_package_paragraph:
     weight: 39
     settings:
@@ -40,6 +41,7 @@ content:
       default_paragraph_type: _none
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
   field_vih_class_class_packages:
     weight: 32
     settings:
@@ -48,11 +50,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
   field_vih_class_color:
     weight: 37
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
   field_vih_class_image:
     type: entity_browser_file
     weight: 35
@@ -65,18 +69,21 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
   field_vih_class_material_price:
     weight: 33
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
   field_vih_class_price_addition:
     weight: 31
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
+    region: content
   field_vih_teacher_class_descr:
     type: entity_reference_paragraphs
     weight: 38
@@ -88,11 +95,13 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   name:
     type: string_textfield
     weight: -5
@@ -100,9 +109,11 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 30
     settings: {  }
     third_party_settings: {  }
+    region: content
 hidden: {  }
