/langeophold/10/tilmelding accordion displaying the body (description) of every taxonomy in a  <p> tag

--- a/config/sync/block.block.contactblock.yml
+++ b/config/sync/block.block.contactblock.yml
@@ -11,7 +11,7 @@ dependencies:
     - site
 id: contactblock
 theme: site
-region: drawer_left
+region: '-1'
 weight: -1
 provider: null
 plugin: contact_block
