--- a/config/sync/block.block.site_branding.yml
+++ b/config/sync/block.block.site_branding.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: Cy3vkpYrD1O5JG-BeEnokF0bByHYDEa8CBfWivB4_SQ
 id: site_branding
 theme: site
-region: drawer_left
+region: '-1'
 weight: -5
 provider: null
 plugin: system_branding_block
