--- a/config/sync/block.block.site_search.yml
+++ b/config/sync/block.block.site_search.yml
@@ -10,7 +10,7 @@ _core:
   default_config_hash: F3d5hyAFunLh4PhGviJF019fHn1Z3_zy5gzsQ0tX1K0
 id: site_search
 theme: site
-region: drawer_left
+region: '-1'
 weight: -6
 provider: null
 plugin: search_form_block
