--- a/config/sync/block.block.site_tools.yml
+++ b/config/sync/block.block.site_tools.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: f3Dd5TnUiFDjFZp9yEGJInwt6cUzs7O6SvLTFTATSlU
 id: site_tools
 theme: site
-region: drawer_left
+region: '-1'
 weight: -3
 provider: null
 plugin: 'system_menu_block:tools'
