--- a/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_teacher_class_description.default.yml
@@ -25,6 +25,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
   field_background_image:
     type: entity_browser_file
     weight: 2
@@ -44,6 +45,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
   field_heading:
     weight: 0
     settings:
@@ -51,6 +53,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
   field_paragraph_user:
     weight: 5
     settings:
@@ -59,6 +62,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
   field_photo:
     type: entity_browser_file
     weight: 3
@@ -71,6 +75,7 @@ content:
       open: true
       selection_mode: selection_append
     third_party_settings: {  }
+    region: content
 hidden:
   created: true
   status: true
