--- a/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_teacher_class_description.default.yml
@@ -25,6 +25,7 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
+    region: content
   field_background_image:
     weight: 4
     label: above
@@ -33,12 +34,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
   field_description:
     weight: 2
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_heading:
     weight: 0
     label: hidden
@@ -46,6 +49,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_paragraph_user:
     weight: 3
     label: above
@@ -53,6 +57,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
   field_photo:
     weight: 1
     label: hidden
@@ -61,4 +66,5 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
 hidden: {  }
