--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
+    - field.field.user.user.field_e_mail
     - field.field.user.user.field_relateret
     - field.field.user.user.field_user_birthday
+    - field.field.user.user.field_user_kvalifikationer
     - field.field.user.user.field_user_name_first
     - field.field.user.user.field_user_name_last
     - field.field.user.user.field_user_picture
@@ -23,24 +25,29 @@ bundle: user
 mode: default
 content:
   account:
-    weight: 9
-    region: content
+    weight: 0
     settings: {  }
     third_party_settings: {  }
   contact:
-    weight: 10
-    region: content
+    weight: 1
     settings: {  }
     third_party_settings: {  }
   field_relateret:
-    weight: 12
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: viewsreference_select
     region: content
+  field_user_kvalifikationer:
+    weight: 2
+    settings:
+      size: 255
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   field_user_picture:
     type: entity_browser_file
-    weight: 11
+    weight: 3
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -52,6 +59,7 @@ content:
     third_party_settings: {  }
     region: content
 hidden:
+  field_e_mail: true
   field_user_birthday: true
   field_user_name_first: true
   field_user_name_last: true
