making possible to schedule update for VIH short course

--- a/config/sync/core.entity_form_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_short_course.default.yml
@@ -11,9 +11,11 @@ dependencies:
     - field.field.node.vih_short_course.field_vih_sc_image
     - field.field.node.vih_short_course.field_vih_sc_option_groups
     - field.field.node.vih_short_course.field_vih_sc_price
+    - field.field.node.vih_short_course.scheduled_update
     - node.type.vih_short_course
   module:
     - entity_browser
+    - inline_entity_form
     - paragraphs
     - path
     - text
@@ -118,6 +120,19 @@ content:
       display_label: true
     weight: 15
     third_party_settings: {  }
+    region: content
+  scheduled_update:
+    weight: 38
+    settings:
+      form_mode: default
+      override_labels: false
+      label_singular: ''
+      label_plural: ''
+      allow_new: true
+      allow_existing: false
+      match_operator: CONTAINS
+    third_party_settings: {  }
+    type: inline_entity_form_complex
     region: content
   sticky:
     type: boolean_checkbox
