--- a/config/sync/core.entity_view_display.node.vih_short_course.default.yml
+++ b/config/sync/core.entity_view_display.node.vih_short_course.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.vih_short_course.field_vih_sc_image
     - field.field.node.vih_short_course.field_vih_sc_option_groups
     - field.field.node.vih_short_course.field_vih_sc_price
+    - field.field.node.vih_short_course.scheduled_update
     - node.type.vih_short_course
   module:
     - entity_reference_revisions
@@ -94,6 +95,17 @@ content:
     weight: 100
     settings: {  }
     third_party_settings: {  }
+    region: content
+  scheduled_update:
+    weight: 108
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  workbench_moderation_control:
+    weight: -20
     region: content
 hidden:
   langcode: true
