--- a/config/sync/node.type.vih_short_course.yml
+++ b/config/sync/node.type.vih_short_course.yml
@@ -4,11 +4,20 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - workbench_moderation
 third_party_settings:
   menu_ui:
     available_menus:
       - main
     parent: 'main:'
+  workbench_moderation:
+    enabled: false
+    allowed_moderation_states:
+      - published
+      - archived
+      - draft
+      - needs_review
+    default_moderation_state: published
 name: 'Short Course'
 type: vih_short_course
 description: ''
