--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "drupal/stage_file_proxy": "^1.0@alpha",
         "drupal/viewsreference": "^1.0@alpha",
         "drupal/mailchimp": "^1.3",
-        "drupal/search_api": "^1.3"
+        "drupal/search_api": "^1.3",
+        "lsolesen/edbbrugs-php-sdk": "^0.2.0"
     },
     "repositories": {
         "packages.drupal.org": {
