--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -29,3 +29,12 @@ vih_subscription.subscription_redirect:
       _title_callback: '\Drupal\vih_subscription\Controller\SubscriptionController::getTitle'
   requirements:
     _permission: 'access content'
+vih_subscription.admin.settings_form:
+  path: '/admin/config/vih_subscription_edbbrugsen/settings'
+  defaults:
+    _form: '\Drupal\vih_subscription\Form\EdbbrugsenSettingsForm'
+    _title: 'EDBBrugsen integration settings'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
