VI-120 New paragraht type user quote

--- a/config/sync/field.field.node.news.field_news_paragraph.yml
+++ b/config/sync/field.field.node.news.field_news_paragraph.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.storage.node.field_news_paragraph
     - node.type.news
     - paragraphs.paragraphs_type.1_column_action_centered
+    - paragraphs.paragraphs_type.user_quote
   module:
     - entity_reference_revisions
 id: node.news.field_news_paragraph
@@ -24,6 +25,7 @@ settings:
     negate: 0
     target_bundles:
       1_column_action_centered: 1_column_action_centered
+      user_quote: user_quote
     target_bundles_drag_drop:
       1_column_action_centered:
         enabled: true
@@ -31,6 +33,9 @@ settings:
       class_packages:
         weight: 18
         enabled: false
+      user_quote:
+        enabled: true
+        weight: 19
       event_list:
         weight: 19
         enabled: false
@@ -44,6 +49,9 @@ settings:
         weight: 22
         enabled: false
       page_content:
+        weight: 23
+        enabled: false
+      file:
         weight: 23
         enabled: false
       short_course_list_:
