--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -5,11 +5,11 @@ dependencies:
   config:
     - entity_browser.browser.image_browser
     - field.field.node.event.body
+    - field.field.node.event.field_event_end_date
     - field.field.node.event.field_event_paragraph
+    - field.field.node.event.field_event_start_date
     - field.field.node.event.field_image
     - field.field.node.event.field_page_main_image
-    - field.field.node.event.field_vih_cp_end_date
-    - field.field.node.event.field_vih_cp_start_date
     - node.type.event
   module:
     - datetime
@@ -25,7 +25,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 31
+    weight: 7
     settings:
       rows: 9
       summary_rows: 3
@@ -34,13 +34,19 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_event_end_date:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_event_paragraph:
     type: entity_reference_paragraphs
-    weight: 36
+    weight: 12
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -50,9 +56,15 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     region: content
+  field_event_start_date:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_image:
     type: entity_browser_file
-    weight: 32
+    weight: 8
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -65,7 +77,7 @@ content:
     region: content
   field_page_main_image:
     type: entity_browser_file
-    weight: 35
+    weight: 11
     settings:
       entity_browser: image_browser
       field_widget_edit: true
@@ -76,27 +88,15 @@ content:
       selection_mode: selection_append
     third_party_settings: {  }
     region: content
-  field_vih_cp_end_date:
-    weight: 34
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
-  field_vih_cp_start_date:
-    weight: 33
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
   langcode:
     type: language_select
-    weight: 2
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     region: content
   path:
     type: path
-    weight: 30
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -104,19 +104,19 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 4
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 5
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -124,7 +124,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
