--- a/config/sync/core.entity_form_display.node.vih_course_period.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_course_period.default.yml
@@ -27,11 +27,13 @@ content:
       summary_rows: 3
       placeholder: ''
     third_party_settings: {  }
+    region: content
   created:
     type: datetime_timestamp
     weight: 10
     settings: {  }
     third_party_settings: {  }
+    region: content
   field_vih_cp_course_slots:
     type: entity_reference_paragraphs
     weight: 35
@@ -43,38 +45,45 @@ content:
       form_display_mode: default
       default_paragraph_type: ''
     third_party_settings: {  }
+    region: content
   field_vih_cp_end_date:
     weight: 34
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
   field_vih_cp_start_date:
     weight: 32
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
+    region: content
   langcode:
     type: language_select
     weight: 2
     settings: {  }
     third_party_settings: {  }
+    region: content
   path:
     type: path
     weight: 30
     settings: {  }
     third_party_settings: {  }
+    region: content
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 15
     third_party_settings: {  }
+    region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
     weight: 16
     third_party_settings: {  }
+    region: content
   title:
     type: string_textfield
     weight: -5
@@ -82,6 +91,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
   uid:
     type: entity_reference_autocomplete
     weight: 5
@@ -90,4 +100,5 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
 hidden: {  }
