--- a/config/sync/field.field.node.event.field_event_end_date.yml
+++ b/config/sync/field.field.node.event.field_event_end_date.yml
@@ -1,20 +1,20 @@
-uuid: 22a20e35-b9d6-4b96-8853-0a81642ef14f
-langcode: da
+uuid: 1feefddd-2f7f-4e8c-9bd3-528289d754a9
+langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_vih_cp_start_date
+    - field.storage.node.field_event_end_date
     - node.type.event
   module:
     - datetime
-id: node.event.field_vih_cp_start_date
-field_name: field_vih_cp_start_date
+id: node.event.field_event_end_date
+field_name: field_event_end_date
 entity_type: node
 bundle: event
-label: 'Start date'
+label: 'End date'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
