--- a/config/sync/user.role.layout_manager.yml
+++ b/config/sync/user.role.layout_manager.yml
@@ -11,12 +11,13 @@ is_admin: false
 permissions:
   - 'administer node display'
   - 'administer panelizer'
+  - 'administer panelizer node event defaults'
   - 'administer panelizer node landing_page defaults'
-  - 'administer panelizer node page defaults'
   - 'administer panelizer node news defaults'
-  - 'administer panelizer node vih_long_cource defaults'
+  - 'administer panelizer node page defaults'
   - 'administer panelizer node vih_course_period defaults'
+  - 'administer panelizer node vih_event_order defaults'
+  - 'administer panelizer node vih_long_cource defaults'
   - 'administer panelizer node vih_long_course_order defaults'
   - 'administer panelizer node vih_short_course defaults'
   - 'administer panelizer node vih_short_course_order defaults'
-  - 'administer panelizer node event defaults'
