--- a/config/sync/core.entity_view_display.node.event.default.yml
+++ b/config/sync/core.entity_view_display.node.event.default.yml
@@ -38,7 +38,7 @@ content:
     region: content
   field_event_end_date:
     weight: 8
-    label: above
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
@@ -56,7 +56,7 @@ content:
     region: content
   field_event_start_date:
     weight: 7
-    label: above
+    label: hidden
     settings:
       format_type: medium
       timezone_override: ''
@@ -83,8 +83,9 @@ content:
     region: content
   links:
     weight: 4
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
 hidden:
+  field_page_main_image: true
   langcode: true
