--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_option.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_option.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.vih_ordered_option.field_vih_oo_amount
     - field.field.paragraph.vih_ordered_option.field_vih_oo_group_name
     - field.field.paragraph.vih_ordered_option.field_vih_oo_option_name
     - field.field.paragraph.vih_ordered_option.field_vih_oo_price_addition
@@ -13,6 +14,15 @@ targetEntityType: paragraph
 bundle: vih_ordered_option
 mode: default
 content:
+  field_vih_oo_amount:
+    weight: 4
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
   field_vih_oo_group_name:
     weight: 0
     label: above
@@ -20,6 +30,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_vih_oo_option_name:
     weight: 1
     label: above
@@ -27,6 +38,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
   field_vih_oo_price_addition:
     weight: 2
     label: above
@@ -37,6 +49,7 @@ content:
       prefix_suffix: true
     third_party_settings: {  }
     type: number_decimal
+    region: content
   field_vih_oo_suboption:
     weight: 3
     label: above
@@ -44,4 +57,5 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+    region: content
 hidden: {  }
