--- a/config/sync/core.entity_view_display.paragraph.class_package.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.class_package.default.yml
@@ -5,38 +5,16 @@ dependencies:
   config:
     - field.field.paragraph.class_package.field_background_color
     - field.field.paragraph.class_package.field_background_image
+    - field.field.paragraph.class_package.field_heading
     - field.field.paragraph.class_package.field_paragraph_class_package
     - paragraphs.paragraphs_type.class_package
-  module:
-    - image
-    - options
 id: paragraph.class_package.default
 targetEntityType: paragraph
 bundle: class_package
 mode: default
-content:
-  field_background_color:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_background_image:
-    weight: 0
-    label: above
-    settings:
-      image_style: ''
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
-  field_paragraph_class_package:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-hidden: {  }
+content: {  }
+hidden:
+  field_background_color: true
+  field_background_image: true
+  field_heading: true
+  field_paragraph_class_package: true
