VI-122 paragraph.class_package form order fix. Some sync config

--- a/config/sync/core.entity_view_display.node.vih_event_order.teaser.yml
+++ b/config/sync/core.entity_view_display.node.vih_event_order.teaser.yml
@@ -16,4 +16,6 @@ content:
     weight: 100
     region: content
 hidden:
+  field_vih_eo_event: true
+  field_vih_eo_persons: true
   langcode: true
